@@ -1,3 +1,12 @@
+Aug 20 2013
+    Restore main window state after all widgets has been hidden
+
+Aug 19 2013
+    Search supports 'Whole word' flag
+
+Aug 13 2013
+    Version, based on Qutepart
+
 Oct 11 2012
     Switch off JavaScript in the Preview if necessary
 
